[package]
edition = "2021"
name = "web3-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
ethers = {version = "1.0.0", features = ["legacy", "solc-full"]}
# ethers-solc = {version = "^1.0.0", default-features = false}
eyre = "0.6.8"
futures = "0.3.5"
futures-timer = "3.0.2"
hex = "0.4.3"
secp256k1 = {version = "0.22", features = ["recovery"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1.20.3", features = ["full"]}
web3 = {version = "0.18.0", features = ["signing"]}

[[bin]]
name = "ether"
path = "src/ether.rs"

[[bin]]
name = "ether1"
path = "src/ether-transfer.rs"

[[bin]]
name = "ether2"
path = "src/ether-contract.rs"

[[bin]]
name = "web3"
path = "src/web3.rs"
