[package]
edition = "2021"
name = "web3-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0",  default-features = false, features = ["legacy"] }
dotenv_codegen = "0.15.0"
futures = "0.3.5"
futures-timer = "3.0.2"
hex = "0.4.3"
eyre = "0.6.8"
#secp256k1 = {version = "0.21", features = ["recovery"]}
tokio = {version = "1.19.2", features = ["full"]}
web3 = {version = "0.18.0", features = ["signing"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers-solc = { version = "^1.0.0",default-features = false}
#ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["full"] }

[[bin]]
name = "ether"
path="src/ether.rs"

[[bin]]
name = "ether1"
path="src/ether-transfer.rs"

[[bin]]
name = "ether2"
path="src/ether-contract.rs"

[[bin]]
name = "web3"
path="src/web3.rs"
